--- a/index.html
+++ b/index.html
@@ -13,14 +13,34 @@
         justify-content: center;
         align-items: center;
         font-family: Arial, sans-serif;
+        background-color: #e4e4e4;
+      }
+
+      .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        margin-top: -30px;
+      }
+
+      .image {
+        max-width: 200px;
+        height: auto;
+      }
+
+      .title {
         font-size: 3rem;
         font-weight: bold;
         color: #333;
-        background-color: #f5f5f5;
+        margin: 0;
       }
     </style>
   </head>
   <body>
-    <div>vivaforever</div>
+    <div class="content">
+      <img src="images/smallmubi.png" alt="Small Mubi" class="image" />
+      <div class="title">vivaforever</div>
+    </div>
   </body>
 </html>
